--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "jotai": "1.7.3",
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "express": "^4.18.2",
+    "jotai": "^2.4.3",
+    "next": "^13.2.4",
+    "patch-package": "^8.0.0",
+    "preact": "^10.17.1",
+    "preact-render-to-string": "^6.2.1",
+    "react": "npm:@preact/compat@^17.1.2",
+    "react-dom": "npm:@preact/compat@^17.1.2"
   },
   "devDependencies": {
-    "@types/react": "17.0.16",
+    "@types/node": "20.8.2",
+    "@types/react": "^17.0.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
